Attempt to fix bug with copying on mobile

--- a/main.css
+++ b/main.css
@@ -103,10 +103,10 @@ body {
 }
 .hidden-value {
     display: block;
-    transform: translateX(00%);
+    transform: translateX(-100%);
 /*    width: 1px;*/
-    height: auto;
-    /*z-index: -1;*/
+    height: 1px;
+    z-index: -1;
     outline: none;
 }
 .tooltip {
